# timelapse-app

./: CLAUDE.md  TESTING.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
qt/: .clang-format  CMakeLists.txt
qt/resources/: resources.qrc
qt/src/: main.cc
qt/src/core/: CacheManager.cc  CacheManager.hh  Database.cc  Database.hh  Error.hh  ErrorLog.cc  ErrorLog.hh  ImageProcessor.cc  ImageProcessor.hh  Photographer.cc  Photographer.hh  ScreenCapture.cc  ScreenCapture.hh  ScreenCaptureLinux.cc  ScreenCaptureMac.cc  ScreenCaptureWindows.cc  VideoExtractor.cc  VideoExtractor.hh
qt/src/models/: FileListModel.cc  FileListModel.hh  FolderListModel.cc  FolderListModel.hh  VideoListModel.cc  VideoListModel.hh
qt/src/ui/: FrameScrubber.cc  FrameScrubber.hh  ImageViewer.cc  ImageViewer.hh  MainWindow.cc  MainWindow.hh
qt/src/utils/: Constants.hh  PathUtils.cc  PathUtils.hh
rust/: Cargo.toml
rust/src/: main.rs
rust/src/core/: database.rs  error.rs  image_processor.rs  mod.rs  photographer.rs  screen_capture.rs  video_extractor.rs
rust/src/ui/: app.rs  image_viewer.rs  mod.rs
rust/src/utils/: constants.rs  mod.rs  paths.rs
scripts/: bump-version.ts
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  timelapse.rs
src/hooks/: useFolders.ts
tauri/: eslint.config.js  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tauri/src/: App.css  App.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: database.rs  main.rs  timelapse.rs
tauri/src/hooks/: useFolders.test.ts
tauri/src/test/: setup.ts
