[package]
name = "timelapse"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Objective-C / AppKit bindings
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["all"] }
objc2-app-kit = { version = "0.3", features = ["all"] }
objc2-core-foundation = { version = "0.3", features = ["all"] }
objc2-core-graphics = { version = "0.3", features = ["all"] }
objc2-quartz-core = { version = "0.3", features = ["all"] }
block2 = "0.6"

# Image processing
image = "0.25"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = "0.4"

# Error handling
thiserror = "1.0"

# File system watching
notify = "6.1"

# Directories
dirs = "5.0"

[[bin]]
name = "timelapse"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
